fixed spacing

--- a/Restaurant_CSS_BS/Styles/restaurantStyles.css
+++ b/Restaurant_CSS_BS/Styles/restaurantStyles.css
@@ -31,9 +31,8 @@ header,footer,{
 nav{
 	border-top: thin #AF3F1A solid;
 	border-bottom: thin #AF3F1A solid;
-	padding-top: 12px;
-	padding-bottom: 12px;
 	margin-top: 4px;
+	padding:14px;
 }
 nav a{
 	background-color: #B4B8C5;
@@ -113,7 +112,22 @@ div.col-lg-3.col-12 {
 .review{
 	margin-bottom: 50px;
 }
+.form{
+	max-width: 60%;
+	margin: 0 auto;
+	/*padding: 50px;*/
+	padding-bottom: 100px;
 
+}
+/*alternate footer*/
+/*.footer{
+	background-color: #AF3F1A;
+	max-width: 100%;
+	padding: 50px;
+	text-align: center;
+	font-weight: 100;
+	color: white;
+}*/
 
 
 
